[gd_scene load_steps=5 format=3 uid="uid://cudroukgxfe0n"]

[ext_resource type="Script" path="res://scripts/Card.gd" id="1_d74fd"]
[ext_resource type="StyleBox" uid="uid://qcjc6xrn5ve4" path="res://styles/basic_card.tres" id="2_e4qjp"]
[ext_resource type="SystemFont" uid="uid://dus37nk1nhce7" path="res://styles/system_font.tres" id="3_0di3k"]
[ext_resource type="Texture2D" uid="uid://c2ybpr5w6boyh" path="res://img/spade.png" id="4_63ll4"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 140.0
offset_top = 75.0
offset_right = 365.0
offset_bottom = 425.0
pivot_offset = Vector2(112.5, 175)
script = ExtResource("1_d74fd")

[node name="FacePanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 225.0
offset_bottom = 350.0
theme_override_styles/panel = ExtResource("2_e4qjp")

[node name="LeftFace" type="RichTextLabel" parent="FacePanel"]
layout_mode = 1
offset_top = 1.0
offset_right = 50.0
offset_bottom = 51.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_0di3k")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]V[/center]"
scroll_active = false

[node name="LeftSuit" type="Sprite2D" parent="FacePanel"]
modulate = Color(0, 0, 0, 1)
position = Vector2(25, 52)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_63ll4")

[node name="RightFace" type="RichTextLabel" parent="FacePanel"]
layout_mode = 0
offset_left = 224.0
offset_top = 350.0
offset_right = 274.0
offset_bottom = 400.0
rotation = 3.14159
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_0di3k")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]V[/center]"
fit_content = true

[node name="RightSuit" type="Sprite2D" parent="FacePanel"]
modulate = Color(0, 0, 0, 1)
position = Vector2(199, 299)
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_63ll4")

[node name="CenterFace" type="RichTextLabel" parent="FacePanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -73.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_0di3k")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[center]V[/center]"
fit_content = true

[node name="CenterSuit" type="Sprite2D" parent="FacePanel"]
modulate = Color(0, 0, 0, 1)
position = Vector2(112, 210)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_63ll4")

[node name="BackPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 225.0
offset_bottom = 350.0
theme_override_styles/panel = ExtResource("2_e4qjp")

[node name="ColorRect" type="ColorRect" parent="BackPanel"]
modulate = Color(0.152941, 0.368627, 0.537255, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 12.0
offset_right = 214.0
offset_bottom = 338.0

[node name="RichTextLabel" type="RichTextLabel" parent="BackPanel"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_0di3k")
bbcode_enabled = true
text = "[center]WrongDog
Playing
Cards[/center]"
